--- a/style.css
+++ b/style.css
@@ -44,6 +44,12 @@ a {
     text-decoration: none;
     color: black;
 }
+.bar {
+    width: 100%;
+    height: 1px;
+    border-bottom: 1px solid rgb(169, 147, 147);
+    box-sizing: border-box;
+}
 .bold {
     font-weight: bold;
 }
@@ -100,6 +106,7 @@ a {
     flex-wrap: wrap;
     justify-content: space-around;
     align-items: center;
+    max-width: 100%;
 }
 header {
     width: 100%;
@@ -144,10 +151,50 @@ header {
 .sign-in-button:hover {
     background-color: var(--darkblue);
 }
+.footer-logos {
+    padding: 50px 0;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-items: baseline;
+    gap: 20px;
+}
+.footer-logos img {
+    height: 100px;
+    width: auto;
+}
 footer {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
     flex-wrap: wrap;
     width: 100%;
+    background-color: rgb(33, 25, 25);
+    color: white;
+    text-align: center;
+    border-radius: 68% 0% 10% 10% / 10% 0% 0% 0% ;
+}
+.author {
+    width: 100%;
+    color: rgb(86, 86, 86);
+    font-size: 12px;
+    text-align: center;
+}
+
+
+
+@media only screen and (max-width: 1100px) {
+    .flex-row {
+        flex-direction: column;
+    }
+    .header-menu {
+        display: none;
+    }
+}
+
+@media only screen and (max-width: 800px) {
+    .header-menu {
+        display: none;
+    }
 }
