--- a/style.css
+++ b/style.css
@@ -103,6 +103,9 @@ a {
     border-right: 5px solid transparent;
     border-top: 5px solid black;
 }
+.current-page {
+    font-weight: 600;
+}
 .flex-center {
     display: flex;
     justify-content: center;
