--- a/style.css
+++ b/style.css
@@ -122,13 +122,17 @@ a {
 }
 header {
     width: 100%;
-    height: 100px;
+    height: 70px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    padding: 30px;
+    padding: 0 30px;
     box-sizing: border-box;
     border-bottom: 2px solid var(--grey);
+    z-index: 101;
+    position: sticky;
+    top: 0;
+    background-color: white;
 }
 .header-logo img {
     width: 200px;
@@ -163,6 +167,9 @@ header {
 .sign-in-button:hover {
     background-color: var(--darkblue);
     padding: 13px;
+}
+.hamburger {
+    display: none;
 }
 .footer-logos {
     padding: 50px 0;
@@ -201,21 +208,46 @@ footer {
     .flex-row {
         flex-direction: column;
     }
-    .header-menu {
-        display: none;
-    }
 }
 
 @media only screen and (max-width: 800px) {
     .header-menu {
         display: none;
     }
+    .hamburger {
+        display: inline-block;
+    }
+    .header-logo img {
+        width: 180px;
+    }
+    .header-menu-visible {
+        position: absolute;
+        top: 70px;
+        left: 0;
+        background-color: rgb(254, 255, 249);
+        width: 100%;
+        height: calc(100vh - 70px);
+        z-index: 100;
+        display: block;
+    }
+    .header-menu-visible ul {
+        flex-direction: column;
+        align-items: center;
+        padding: 0;
+    }
+    .header-menu-visible ul li {
+        font-size: 105%;
+        height: 15%;
+        padding: 5%;
+        width: 100%;
+        box-sizing: border-box;
+        border-bottom: 1px solid black;
+    }
 }
 
 
 .hamburger {
     padding: 0px 15px;
-    display: inline-block;
     cursor: pointer;
     transition-property: opacity, filter;
     transition-duration: 0.15s;
