--- a/style.css
+++ b/style.css
@@ -42,7 +42,8 @@ body {
     align-items: center;
 }
 .content {
-    max-width: 22222px;
+    padding: 50px 50px 0px 50px;
+    max-width: 1200px;
     width: auto;
     display: flex;
     flex-direction: column;
@@ -56,7 +57,7 @@ a {
 .bar {
     width: 100%;
     height: 1px;
-    border-bottom: 1px solid rgb(169, 147, 147);
+    border-bottom: 1px solid rgb(198, 179, 179);
     box-sizing: border-box;
 }
 .bold {
@@ -117,6 +118,13 @@ a {
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-around;
+    align-items: center;
+    max-width: 100%;
+}
+.flex-column {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
     align-items: center;
     max-width: 100%;
 }
@@ -211,6 +219,11 @@ footer {
 }
 
 @media only screen and (max-width: 800px) {
+    .content {
+        padding: 10px;
+        width: 100%;
+        box-sizing: border-box;
+    }
     .header-menu {
         display: none;
     }
@@ -231,6 +244,7 @@ footer {
         display: block;
     }
     .header-menu-visible ul {
+        margin: 0;
         flex-direction: column;
         align-items: center;
         padding: 0;
