--- a/css/page-style.css
+++ b/css/page-style.css
@@ -83,6 +83,11 @@
 #more-proclamation {
     display: none;
 }
+.google-form-iframe {
+    width: 800px;
+    min-height: 1260px;
+    height: auto;
+}
 
 @media only screen and (max-width: 1100px) {
     .page-content {
@@ -111,6 +116,11 @@
     .symbole-item {
         width: 100% !important;
         box-sizing: border-box;
+    }
+    .google-form-iframe {
+        width: 100%;
+        min-width: 80vw;
+        height: 1420px;
     }
 }
 
