--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ body {
     align-items: center;
 }
 .content {
-    padding: 50px 50px 0px 50px;
+    padding: 30px 50px 0px 50px;
     box-sizing: border-box;
     max-width: 1200px;
     width: auto;
@@ -132,6 +132,12 @@ a {
     align-items: center;
     max-width: 100%;
 }
+.flex-right {
+    display: flex; 
+    flex-direction: column; 
+    align-items: flex-end; 
+    width: 100%;
+}
 header {
     width: 100%;
     height: 70px;
@@ -178,7 +184,7 @@ header {
 }
 .sign-in-button:hover {
     background-color: var(--darkblue);
-    padding: 13px;
+    padding: 12px;
 }
 .hamburger {
     display: none;
@@ -220,6 +226,9 @@ footer {
     -webkit-box-shadow: 4px 4px 18px -9px rgba(66, 68, 90, 1);
     -moz-box-shadow: 4px 4px 18px -9px rgba(66, 68, 90, 1);
     box-shadow: 4px 4px 18px -9px rgba(66, 68, 90, 1);
+}
+.full-img {
+    width: 80%;
 }
 .phone-number::before {
     content: '📞 ';
